--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -56,7 +56,6 @@ set_real_ip_from 107.174.83.58;
 set_real_ip_from 107.175.31.193;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.10.20;
-set_real_ip_from 107.189.1.111;
 set_real_ip_from 107.189.11.111;
 set_real_ip_from 107.189.11.113;
 set_real_ip_from 107.189.1.160;
@@ -984,7 +983,6 @@ set_real_ip_from 209.141.54.218;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.58.254;
 set_real_ip_from 209.141.61.52;
-set_real_ip_from 209.145.61.207;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
@@ -1032,7 +1030,6 @@ set_real_ip_from 23.154.177.29;
 set_real_ip_from 23.154.177.30;
 set_real_ip_from 23.154.177.31;
 set_real_ip_from 23.154.177.7;
-set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.13;
@@ -1148,7 +1145,6 @@ set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
-set_real_ip_from 2605:6400:30:f77f:f41c:2bce:7d61:210e;
 set_real_ip_from 2605:6400:30:f78b::2;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 set_real_ip_from 2605:6400:30:f7ca::2;
@@ -1290,7 +1286,6 @@ set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:4f9:2b:75d::124:148;
-set_real_ip_from 2a01:4ff:1f0:8ae6::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
@@ -1363,6 +1358,7 @@ set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1610,7 +1606,8 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:4a9a::1;
+set_real_ip_from 2a0d:8140:1fff:22d0::1;
+set_real_ip_from 2a0d:8140:1fff:395e::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1647,6 +1644,7 @@ set_real_ip_from 2a0e:bfc0:0:f::e538;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
+set_real_ip_from 2a0f:85c1:356:424c::1;
 set_real_ip_from 2a0f:85c1:356:5bdd::beef;
 set_real_ip_from 2a0f:ca80:1337::7da1:75ca;
 set_real_ip_from 2a0f:df00:0:255::194;
@@ -1748,7 +1746,8 @@ set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.130.60.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.137.99.14;
+set_real_ip_from 45.137.99.10;
+set_real_ip_from 45.137.99.216;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
@@ -1825,7 +1824,6 @@ set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.168.108;
 set_real_ip_from 45.9.168.113;
 set_real_ip_from 45.9.168.22;
-set_real_ip_from 45.94.31.198;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.16;
@@ -1858,6 +1856,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1892,7 +1891,6 @@ set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
 set_real_ip_from 57.128.164.66;
-set_real_ip_from 5.78.133.24;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
@@ -1906,7 +1904,9 @@ set_real_ip_from 65.87.7.22;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
+set_real_ip_from 66.78.40.73;
 set_real_ip_from 67.219.109.141;
+set_real_ip_from 69.126.112.240;
 set_real_ip_from 70.34.249.72;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
@@ -1952,7 +1952,6 @@ set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.254.132;
-set_real_ip_from 88.151.117.146;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
