--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -56,6 +56,7 @@ allow 107.174.83.58;
 allow 107.175.31.193;
 allow 107.189.10.175;
 allow 107.189.10.20;
+allow 107.189.1.111;
 allow 107.189.11.111;
 allow 107.189.11.113;
 allow 107.189.1.160;
@@ -122,6 +123,7 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
+allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -202,7 +204,6 @@ allow 161.97.71.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
-allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -271,7 +272,6 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 179.35.8.27;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -1030,6 +1030,7 @@ allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
+allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.13;
@@ -1086,7 +1087,6 @@ allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
-allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1145,6 +1145,7 @@ allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
+allow 2605:6400:30:f77f:f41c:2bce:7d61:210e;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
@@ -1608,6 +1609,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1622,6 +1624,7 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1747,6 +1750,7 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
+allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1944,6 +1948,8 @@ allow 84.247.183.128;
 allow 84.252.120.131;
 allow 85.239.41.130;
 allow 85.93.218.204;
+allow 86.107.101.115;
+allow 86.107.101.122;
 allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
@@ -1984,6 +1990,7 @@ allow 91.92.109.43;
 allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
+allow 93.115.172.238;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.95.227.37;
