--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -123,6 +123,7 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
+allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -533,6 +534,7 @@ allow 185.220.103.6;
 allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
+allow 185.224.0.21;
 allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.225.71.14;
@@ -1011,7 +1013,6 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1627,6 +1628,7 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
