--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -123,6 +123,7 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
+deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -533,6 +534,7 @@ deny 185.220.103.6;
 deny 185.220.103.7;
 deny 185.220.103.8;
 deny 185.220.103.9;
+deny 185.224.0.21;
 deny 185.225.69.203;
 deny 185.225.69.232;
 deny 185.225.71.14;
@@ -1011,7 +1013,6 @@ deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
-deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
@@ -1627,6 +1628,7 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
