--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -24,6 +24,7 @@ deny 104.244.73.190;
 deny 104.244.73.193;
 deny 104.244.73.43;
 deny 104.244.74.173;
+deny 104.244.74.229;
 deny 104.244.74.23;
 deny 104.244.74.97;
 deny 104.244.75.140;
@@ -122,7 +123,6 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
-deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -718,7 +718,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.144.178.185;
 deny 198.144.178.187;
-deny 198.167.206.199;
+deny 198.167.206.157;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -1161,6 +1161,7 @@ deny 2605:6400:30:f858:2704:73e1:7085:12ef;
 deny 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
+deny 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
@@ -1613,6 +1614,7 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1627,7 +1629,6 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1753,6 +1754,7 @@ deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.10;
+deny 45.137.99.14;
 deny 45.137.99.216;
 deny 45.138.16.107;
 deny 45.138.16.113;
